--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=security
-
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=flyway
 spring.jpa.show-sql=true
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+spring.flyway.locations=classpath:db/changelog
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=flyway
